# sparql-delete-data-generator

./: Cargo.toml  Dockerfile
src/: main.rs  sparql.rs
src/rdf/: mod.rs  triple_generator.rs
src/rdf/triple_compressor/: compressor.rs  decompressor.rs  frozen.rs  mod.rs
