[package]
name = "sparql_delete_data_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.21"
ahash = "0.8.0"
walkdir = "2.3.2"
memory_mapped = { git = "https://github.com/Clueliss/memory-mapped" }
