[package]
name = "sparql_delete_data_generator"
version = "0.1.0"
edition = "2021"
authors = ["Liss Heidrich"]
description = "Compress n-triple datasets and generate SPARQL DELETE DATA queries from their compressed versions."

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
ahash = { version = "0.8.0", default-features = false } # do not enable std feature as hashes will be different between program executions
walkdir = "2.3.2"
memory_mapped = { git = "https://github.com/Clueliss/memory-mapped", rev = "66f0dfb" }
rayon = "1.5.3"
thiserror = "1.0.35"
rio_turtle = "0.7.1"
rio_api = "0.7.1"
